# isimud

./: .gitignore  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml
configs/: config.sample.toml
packaging/macos/: Info.plist.template
scripts/: build-release.sh  package-macos-app.sh  package-release.sh
src/: autostart.rs  config.rs  config_watch.rs  error.rs  lib.rs  logging.rs  main.rs  mcp.rs  playback.rs  runtime_shell.rs  runtime_tray.rs  server.rs  state.rs  url_scheme.rs  voices.rs  worker.rs
src/providers/: apple.rs  google.rs  mod.rs  openai.rs
tests/: speech_engine.rs
