[package]
name = "isimud"
version = "0.1.0"
authors = ["Bruno Meilick <b@bnomei.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.89"
description = "AI-native macOS menu bar text-to-speech and MCP server for agents."
readme = "README.md"
repository = "https://github.com/bnomei/isimud"
homepage = "https://github.com/bnomei/isimud"
documentation = "https://docs.rs/isimud"
keywords = ["text-to-speech", "tts", "macos", "mcp", "voice"]
default-run = "isimud"
autobins = false

[lib]
name = "isimud"
path = "src/lib.rs"

[[bin]]
name = "isimud"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arc-swap = "1.9.1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server", "transport-streamable-http-server-session", "tower"] }
rodio = "0.22.2"
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "process", "signal", "io-util"] }
toml = "0.8"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-avf-audio = { version = "0.3.2", features = ["AVSpeechSynthesis", "block2"] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSString"] }
tao = "0.34"
tracing-oslog = "0.3.0"
tray-icon = "0.21"

[dev-dependencies]
tempfile = "3.27.0"
